--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://github.com/YOASOBIikura/back-end",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
